Wed May 27 17:33:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* hash.c (hash_fetch): new method.

	* regex.c (re_search): check whether translate table is set.

Tue May 26 11:39:50 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_23.

	* parse.y (yylex): no UPLUS/UMINUS for 1st argument if
	  parenthesises are omitted.

Tue May 26 01:09:55 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): (?XI) for turns off the
	  corresponding option.

Mon May 25 12:38:56 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): inline i option (?i).

	* regex.c (re_compile_pattern): inline x option (?x).

	* regex.c (re_compile_pattern): x option for regexp.

	* dir.c (dir_s_open): returns block's evaluated value.

	* io.c (f_open): returns block's evaluated value.

	* ext/curses/curses.c (curses_addstr): nil argument caused SEGV.

Fri May 22 11:52:45 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): push mark on (?:), so that
	  laststart check for {a,b} can be done.

Thu May 21 17:31:16 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_match): wrong match (too non-greedy) for `{a,b}?'.

	* io.c (io_lineno): new method IO#lineno, IO#lineno=.

Wed May 20 06:04:43 1998  MAEDA shugo  <shugo@aianet.ne.jp>

	* BeOS patch.

Wed May 20 16:32:19 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* bignum.c (BIGDN): use RSHIFT(), instead of mere `>>'.

Tue May 19 16:36:26 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_22.

Tue May 19 16:31:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (assignable): specification changed for in-block
 	  variable definition.

	* eval.c (dyna_var_asgn): error in in-block variables' compile
 	  time definition.

	* parse.y (str_extend): wrong nesting detection.

Tue May 19 09:47:55 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>
