@@ -9,34 +9,59 @@
 
 require "tkscrollbox"
 
-list = TkScrollbox.new {
-  relief 'raised'
-  width 20
-  height 20
-  setgrid 'yes'
-  pack
-}
-
 # The procedure below is invoked to open a browser on a given file;  if the
 # file is a directory then another instance of this program is invoked; if
 # the file is a regular file then the Mx editor is invoked to display
 # the file.
 
-def browse (dir, file)
-  if dir != "."
-    file="#{dir}/#{file}"
-    if File.directory? file
-      system "browse #{file} &"
-    else
-      if File.file? file
-	if ENV['EDITOR']
-	  system format("%s %s&", ENV['EDITOR'], file)
-	else
-	  sysmte "xedit #{file}&"
-	end
-      else
-	STDERR.print "\"#{file}\" isn't a directory or regular file"
+$dirlist = {}
+
+def browsedir (dir)
+  if $dirlist.key? dir
+    $dirlist[dir]
+  else
+    top = if $dirlist.size > 0 then TkToplevel.new else nil end
+    list = TkScrollbox.new(top) {
+      relief 'raised'
+      width 20
+      height 20
+      setgrid 'yes'
+      pack
+    }
+    list.insert 'end', *`ls #{dir}`.split
+
+    # Set up bindings for the browser.
+
+    list.focus
+    list.bind "Control-q", proc{exit}
+    list.bind "Control-c", proc{exit}
+    list.bind "Control-p", proc{
+      print "selection <", TkSelection.get, ">\n"
+    }
+
+    list.bind "Double-Button-1", proc{
+      for i in TkSelection.get.split
+	print "clicked ", i, "\n"
+	browse dir, i
       end
+    }
+    $dirlist[dir] = list
+  end
+end
+
+def browse (dir, file)
+  file="#{dir}/#{file}"
+  if File.directory? file
+    browsedir(file)
+  else
+    if File.file? file
+      if ENV['EDITOR']
+	system format("%s %s&", ENV['EDITOR'], file)
+      else
+	system "xedit #{file}&"
+      end
+    else
+      STDERR.print "\"#{file}\" isn't a directory or regular file"
     end
   end
 end
@@ -49,21 +74,6 @@ if ARGV.length>0
 else
   dir="."
 end
-list.insert 'end', *`ls #{dir}`.split
 
-# Set up bindings for the browser.
-
-list.focus
-list.bind "Control-q", proc{exit}
-list.bind "Control-c", proc{exit}
-list.bind "Control-p", proc{
-  print "selection <", TkSelection.get, ">\n"
-}
-
-list.bind "Double-Button-1", proc{
-  for i in TkSelection.get.split
-    print "clicked ", i, "\n"
-    browse dir, i
-  end
-}
+browsedir(dir)
 Tk.mainloop
